--- a/build.properties
+++ b/build.properties
@@ -18,12 +18,12 @@ test.relatorio.dir=relatorios-de-teste
 resources.dir=src/main/resources
 test.resources.dir=src/test/resources
 
-war.nome=pagpag
-test.war.nome=pagpag.test
+war.nome=parrot
+test.war.nome=parrot.test
 
-host.amazon.producao=link-para-producao
-host.usuario=ubuntu
-host.diretorio.pouso=/home/ubuntu
+host.amazon.producao=199.231.86.41
+host.usuario=parrot
+host.diretorio.pouso=/home/parrot
 host.key.pem=/arquivo *.pem do host
 
 tomcat.webapps=/var/lib/tomcat6/webapps
