--- a/ivy.xml
+++ b/ivy.xml
@@ -1,6 +1,6 @@
 <ivy-module version="2.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
 		xsi:noNamespaceSchemaLocation="http://ant.apache.org/ivy/schemas/ivy.xsd">
-	<info organisation="br.com.caelum" module="pagpag" />
+	<info organisation="br.com.startupers" module="parrot" />
 	
 	<configurations>
 		<conf name="runtime" />
