--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
-*.class
+WebContent/WEB-INF/classes
+WebContent/WEB-INF/classes-test
 WebContent/WEB-INF/lib
-lib/test
-jetty/lib
+bin/
+build/
+ivy/
+lib/
+relatorios-de-teste/
+jetty/*/*
