Configurando o deploy no tomcat.

--- a/build.properties
+++ b/build.properties
@@ -22,9 +22,9 @@ war.nome=parrot
 test.war.nome=parrot.test
 
 host.amazon.producao=199.231.86.41
-host.usuario=parrot
-host.diretorio.pouso=/home/parrot
-host.key.pem=/arquivo *.pem do host
+host.usuario=root
+host.diretorio.pouso=/root
+host.password=7osQd141iL
 
 tomcat.webapps=/var/lib/tomcat6/webapps
 
