--- a/ivy.xml
+++ b/ivy.xml
@@ -16,6 +16,8 @@
 		</dependency>
 		<dependency conf="runtime->default" org="org.slf4j" name="slf4j-log4j12" rev="1.6.0"/>
 		<dependency conf="runtime->default" org="org.slf4j" name="slf4j-api" rev="1.6.0"/>
+		<dependency conf="runtime->default" org="org.json" name="json" rev="20090211"/>
+            
 
 		<!-- Dependencias de teste -->
 		<dependency conf="test->default" org="junit" name="junit" rev="4.10">
