--- a/.classpath
+++ b/.classpath
@@ -34,5 +34,6 @@
 	<classpathentry kind="lib" path="lib/test/junit-jar-junit-4.10.jar"/>
 	<classpathentry kind="lib" path="lib/test/mockito-core-jar-mockito-core-1.9.0.jar"/>
 	<classpathentry kind="lib" path="lib/test/objenesis-jar-objenesis-1.0.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v7.0"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
