--- a/build.properties
+++ b/build.properties
@@ -18,13 +18,13 @@ test.relatorio.dir=relatorios-de-teste
 resources.dir=src/main/resources
 test.resources.dir=src/test/resources
 
-war.nome=parrot
-test.war.nome=parrot.test
+war.nome=root
+test.war.nome=parrott.test
 
-host.amazon.producao=199.231.86.41
-host.usuario=root
-host.diretorio.pouso=/root
-host.password=7osQd141iL
+host.amazon.producao=54.232.121.88
+host.usuario=ubuntu
+host.diretorio.pouso=/ubuntu
+host.key.pem=./parrott.pem
 
 tomcat.webapps=/var/lib/tomcat6/webapps
 
