--- a/ivy.xml
+++ b/ivy.xml
@@ -20,6 +20,9 @@
 		<dependency conf="runtime->default" org="org.apache.httpcomponents" name="httpclient" rev="4.2.1"/>
 		<dependency conf="runtime->default" org="org.apache.httpcomponents" name="fluent-hc" rev="4.2.1"/>
 		<dependency conf="runtime->default" org="jstl" name="jstl" rev="1.2" />
+        <dependency conf="runtime->default" org="org.hibernate" name="hibernate-validator" rev="4.3.0.Final"/>
+        <dependency conf="runtime->default" org="commons-email" name="commons-email" rev="1.1"/>
+        <dependency conf="runtime->default" org="javax.mail" name="mail" rev="1.4.5"/>
             
 
 		<!-- Dependencias de teste -->
@@ -27,6 +30,8 @@
 			<exclude org="org.slf4j"/>
 		</dependency>
 		<dependency conf="test->default" org="org.mockito" name="mockito-core" rev="1.9.0"/>
+		<dependency conf="test->*" org="org.seleniumhq.selenium" name="selenium-java" rev="2.22.0"/>
+		<dependency conf="test->default" org="org.seleniumhq.selenium" name="selenium-server" rev="2.22.0"/>
 		
 		<!-- Para rodar testes de aceitação -->
 		<dependency conf="jetty->*" org="org.eclipse.jetty" name="jetty-deploy" rev="7.0.0.M2"/>
