mudando path do subscribe

--- a/build.properties
+++ b/build.properties
@@ -23,7 +23,7 @@ test.war.nome=parrott.test
 
 host.amazon.producao=54.232.121.88
 host.usuario=ubuntu
-host.diretorio.pouso=/ubuntu
+host.diretorio.pouso=/home/ubuntu
 host.key.pem=./parrott.pem
 
 tomcat.webapps=/var/lib/tomcat6/webapps
