--- a/build.properties
+++ b/build.properties
@@ -18,7 +18,7 @@ test.relatorio.dir=relatorios-de-teste
 resources.dir=src/main/resources
 test.resources.dir=src/test/resources
 
-war.nome=root
+war.nome=parrott
 test.war.nome=parrott.test
 
 host.amazon.producao=54.232.121.88
